# tody

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  mise.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  db.rs  lib.rs  main.rs  ui.rs  uninstall.rs  update.rs
