[package]
name = "tody"
version = "2026.2.1"
edition = "2024"
description = "tiny tidy todos — a path-aware task manager for global and local project tasks"
license = "MIT"
repository = "https://github.com/treyorr/tody"
readme = "README.md"
keywords = ["todo", "tasks", "cli", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
demand = "1.7"
dirs = "6"
rusqlite = { version = "0.37", features = ["bundled"] }
self_update = { version = "0.41", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "rustls"] }
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.9"

[dev-dependencies]
tempfile = "3"
